--- a/app/views/cosmetics-submit-search/left-nav-cosmetic-ingredients-search-errors.html
+++ b/app/views/cosmetics-submit-search/left-nav-cosmetic-ingredients-search-errors.html
@@ -1,7 +1,7 @@
 {% extends "layout-02-noacc.html" %}
 
 {% block pageTitle %}
-    Error: Ingredient search
+Error: Ingredient search
 {% endblock %}
 
 
@@ -24,23 +24,24 @@
   <div class="govuk-grid-column-full govuk-!-margin-top-4 govuk-!-margin-bottom-6">
 
 
-      <div class="govuk-grid-row">
-        <div class="govuk-grid-column-two-thirds opss-desktop-min-height--xs">
-          <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="cosmetic-products-hint">
-            Ingredient &ndash; search
-          </h1>
-          <p id="cosmetic-products-hint" class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
-            Search for an ingredient included in your cosmetic product notifications. <span class="govuk-!-font-size-16">(Compatible only with notifications notified after 21 August 2022)</span>.
-          </p>  <!-- (Valid for notifications notified after 21 August 2022) -->
-        </div>
-        <!--div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
+    <div class="govuk-grid-row">
+      <div class="govuk-grid-column-two-thirds opss-desktop-min-height--xs">
+        <h1 class="govuk-heading-l govuk-!-margin-bottom-2" aria-describedby="cosmetic-products-hint">
+          Ingredient &ndash; search
+        </h1>
+        <p id="cosmetic-products-hint" class="govuk-body opss-secondary-text govuk-!-margin-bottom-1">
+          Search for an ingredient included in your cosmetic product notifications. <span
+            class="govuk-!-font-size-16">(Compatible only with notifications notified after 21 August 2022)</span>.
+        </p> <!-- (Valid for notifications notified after 21 August 2022) -->
+      </div>
+      <!--div class="govuk-grid-column-one-third govuk-!-margin-bottom-2">
           <div class="opss-text-align-right">
             <a href="#" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
               Add a cosmetic product
             </a>
           </div>
         </div-->
-      </div>
+    </div>
   </div>
 </div>
 
@@ -49,25 +50,29 @@
   <nav class="govuk-grid-column-one-quarter govuk-!-padding-right-0" aria-label="Secondary">
 
     <a href="#page-content" class="govuk-skip-link opss-skip-link">
-        Skip to the main content
+      Skip to the main content
     </a>
 
     <ul class="govuk-list opss-left-nav">
       <li>
-          <a href="left-nav-cosmetic-products.html" class="govuk-link govuk-link--no-visited-state">Product notifications</a>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Product notifications</a>
+        <!-- left-nav-cosmetic-products.html -->
       </li>
       <li class="govuk-!-margin-bottom-6">
-          <a href="left-nav-cosmetic-products-drafts.html" class="govuk-link govuk-link--no-visited-state">Draft notifications</a>
+        <a href="#" class="govuk-link govuk-link--no-visited-state">Draft notifications</a>
+        <!-- left-nav-cosmetic-products-drafts.html -->
       </li>
       <!--li class="govuk-!-margin-bottom-6">
           <a href="left-nav-cosmetic-products-archived.html" class="govuk-link govuk-link--no-visited-state">Archived notifications</a>
-      </li--> 
+      </li-->
       <li>
-        <a href="left-nav-cosmetic-products-search.html" class="govuk-link govuk-link--no-visited-state">Product - search</a>
-      </li> 
+        <a href="left-nav-cosmetic-products-search.html" class="govuk-link govuk-link--no-visited-state">Product -
+          search</a>
+      </li>
       <li class="opss-left-nav__active">
-        <a href="left-nav-cosmetic-ingredients-search.html" class="govuk-link govuk-link--no-visited-state" aria-current="page">Ingredient - search</a>
-      </li>                
+        <a href="left-nav-cosmetic-ingredients-search.html" class="govuk-link govuk-link--no-visited-state"
+          aria-current="page">Ingredient - search</a>
+      </li>
     </ul>
 
   </nav>
@@ -79,20 +84,23 @@
 
       <div class="govuk-grid-row">
         <div class="govuk-grid-column-full">
-          
+
           <div class="govuk-form-group govuk-form-group--error">
             <label class="govuk-label--s" for="ingredient-search">Search</label>
 
-            <div class="govuk-hint govuk-!-font-size-16 govuk-!-display-inline-block govuk-!-margin-top-1" id="search-hint">
+            <div class="govuk-hint govuk-!-font-size-16 govuk-!-display-inline-block govuk-!-margin-top-1"
+              id="search-hint">
               <span class="govuk-visually-hidden">Search</span> on an ingredient name.
             </div>
 
             <p id="ingredient-search-error" class="govuk-error-message">
               <span class="govuk-visually-hidden">Error:</span> Enter an ingredient name
-            </p>            
-            
+            </p>
+
             <div class="govuk-input__wrapper opss-search__wrapper">
-              <input class="govuk-input govuk-!-width-three-quarters govuk-input--error" spellcheck="false" type="search" name="ingredient-search" id="ingredient-search" aria-describedby="search-hint ingredient-search-error">
+              <input class="govuk-input govuk-!-width-three-quarters govuk-input--error" spellcheck="false"
+                type="search" name="ingredient-search" id="ingredient-search"
+                aria-describedby="search-hint ingredient-search-error">
               <button class="govuk-button govuk-!-margin-bottom-0">
                 <span class="govuk-visually-hidden">Submit search</span>
               </button>
@@ -101,17 +109,19 @@
 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset opss-grouping" aria-describedby="filters-match">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
+              <legend
+                class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
                 Match type
               </legend>
 
               <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-1" id="filters-match">
                 You can filter the results to match against the ingredient name exactly or to any of its words.
               </div>
-      
+
               <div class="govuk-radios govuk-radios--inline govuk-radios--small govuk-!-margin-top-3">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input opss-radios__input-default" id="match" name="match" type="radio" value="exact" checked>
+                  <input class="govuk-radios__input opss-radios__input-default" id="match" name="match" type="radio"
+                    value="exact" checked>
                   <label class="govuk-label govuk-radios__label" for="match">
                     Exact match only
                   </label>
@@ -123,22 +133,24 @@
                   </label>
                 </div>
               </div>
-            </fieldset> 
-          </div>          
+            </fieldset>
+          </div>
 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset opss-grouping" aria-describedby="filters-status">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
+              <legend
+                class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
                 Notification status
               </legend>
 
               <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-1" id="filters-status">
                 You can filter the search results to show only notified or archived notifications.
               </div>
-      
+
               <div class="govuk-radios govuk-radios--inline govuk-radios--small govuk-!-margin-top-3">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input opss-radios__input-default" id="status" name="status" type="radio" value="notified" checked>
+                  <input class="govuk-radios__input opss-radios__input-default" id="status" name="status" type="radio"
+                    value="notified" checked>
                   <label class="govuk-label govuk-radios__label" for="status">
                     Notified
                   </label>
@@ -154,11 +166,11 @@
                   <label class="govuk-label govuk-radios__label" for="status-3">
                     Both
                   </label>
-                </div>                
+                </div>
               </div>
-            </fieldset> 
+            </fieldset>
           </div>
-<!--
+          <!--
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset govuk-!-padding-bottom-5 opss-grouping" aria-describedby="notified-date">
               <legend class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
@@ -255,21 +267,23 @@
 
             </fieldset> 
           </div>          
--->            
+-->
 
           <div class="govuk-form-group">
             <fieldset class="govuk-fieldset opss-grouping" aria-describedby="sorting-order">
-              <legend class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
+              <legend
+                class="govuk-fieldset__legend govuk-fieldset__legend--s opss-grouping__legend--s opss-grouping__heading--norm">
                 Sorting order
               </legend>
 
               <div class="govuk-hint govuk-!-font-size-16 govuk-!-margin-top-1" id="sorting-order">
                 You can sort the ordering of how the notifications will be displayed.
               </div>
-      
+
               <div class="govuk-radios govuk-radios--inline govuk-radios--small govuk-!-margin-top-3">
                 <div class="govuk-radios__item">
-                  <input class="govuk-radios__input opss-radios__input-default" id="sorting" name="sorting" type="radio" value="relevance" checked>
+                  <input class="govuk-radios__input opss-radios__input-default" id="sorting" name="sorting" type="radio"
+                    value="relevance" checked>
                   <label class="govuk-label govuk-radios__label" for="sorting">
                     Relevance
                   </label>
@@ -285,29 +299,29 @@
                   <label class="govuk-label govuk-radios__label" for="sorting-3">
                     Oldest
                   </label>
-                </div>                
+                </div>
               </div>
-            </fieldset> 
-          </div>  
-          
+            </fieldset>
+          </div>
+
           <div class="govuk-button-group">
             <button class="govuk-button">
               Search
             </button>
-          
+
             <button type="reset" class="govuk-button opss-button-link opss-nojs-hide">
               Reset
             </button>
-          </div>          
+          </div>
 
         </div>
-      </div>     
+      </div>
 
     </form>
 
   </section>
 </div>
 
-{% include "cosmetics-submit-search/inc_clear-form-js.html" %} 
+{% include "cosmetics-submit-search/inc_clear-form-js.html" %}
 
 {% endblock %}
