cos text design updates

--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
@@ -1,121 +1,127 @@
 {% extends "layout-01.html" %}
 
 {% block pageTitle %}
-    Ingredient 2a
+Ingredient 2a
 {% endblock %}
 
 {% block beforeContent %}
-    {{ govukBackLink({
-        text: "Back",
-        href: "/index"
-    }) }}
+{{ govukBackLink({
+text: "Back",
+href: "/index"
+}) }}
 {% endblock %}
 
 
 {% block content %}
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-full">
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-full">
 
-      <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
-        Add an ingredient the <abbr>NPIS</abbr> needs to know about
-      </h1>
+    <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
+      Add an ingredient the <abbr>NPIS</abbr> needs to know about
+    </h1>
 
-    </div>
+  </div>
+</div>
+
+<div class="govuk-grid-row">
+  <div class="govuk-grid-column-two-thirds">
+
+    <p class="govuk-body-s opss-secondary-text">For every ingredient:</p>
+
+    <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
+      <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
+      <li>
+        {% include "cosmetics-general/inc_npis-hint.html" %}
+        <!--The exact concentration of a poisonous ingredient is required - especially if the details match ingredients listed in the following poison tables-->
+      </li>
+    </ul>
+
+    {% include "cosmetics-general/inc_tables-details-details.html" %}
+
+    <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-0 govuk-!-margin-bottom-6">
+
+    <form id="skip-to-form" action="#" novalidate>
+
+      <div class="govuk-form-group">
+        <fieldset class="govuk-fieldset">
+          <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
+            Ingredient 1
+          </legend>
+
+          <div class="govuk-form-group">
+            <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="ingredient-5">What is the
+              name?</label>
+            <input class="govuk-input" id="ingredient-5" name="ingredient-5" type="text" spellcheck="false">
+          </div>
+
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-one-half">
+
+              <div class="govuk-form-group">
+
+                <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the
+                  exact concentration?</label>
+                <div class="govuk-input__wrapper">
+                  <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text"
+                    maxlength="3">
+                  <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt;
+                      w/w</span></div>
+                </div>
+
+              </div>
+
+            </div>
+            <div class="govuk-grid-column-one-half">
+
+              <div class="govuk-form-group">
+
+                <div class="govuk-checkboxes opss-float-right-desktop">
+                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="cas-1">What is the CAS
+                    number?</label>
+                  <input class="govuk-input govuk-input--width-10" id="cas-1" name="cas-1" type="text">
+                </div>
+
+              </div>
+
+            </div>
+          </div>
+
+          <div class="govuk-grid-row">
+            <div class="govuk-grid-column-full">
+
+              <div class="govuk-form-group">
+
+                <div class="govuk-checkboxes govuk-!-padding-top-6">
+                  <div class="govuk-checkboxes__item">
+                    <input class="govuk-checkboxes__input" id="poisonous-1" name="poisonous-1" type="checkbox"
+                      value="checkbox" checked disabled aria-disabled="true">
+                    <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-1">
+                      {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
+                    </label>
+                    {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
+                  </div>
+                </div>
+
+              </div>
+
+            </div>
+
+          </div>
+
+        </fieldset>
+      </div>
+
+      <button class="govuk-button" data-module="govuk-button">
+        Save and continue
+      </button>
+
+    </form>
+
   </div>
 
-  <div class="govuk-grid-row">
-    <div class="govuk-grid-column-two-thirds">
+  <div class="govuk-grid-column-one-third">
 
-      <p class="govuk-body-s opss-secondary-text">For every ingredient:</p>
-        
-      <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
-        <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
-        <li>
-          {% include "cosmetics-general/inc_npis-hint.html" %}
-          <!--The exact concentration of a poisonous ingredient is required - especially if the details match ingredients listed in the following poison tables-->
-        </li>
-      </ul>
-
-      {% include "cosmetics-general/inc_tables-details-details.html" %}   
-      
-      <hr class="govuk-section-break govuk-section-break--visible govuk-!-margin-top-0 govuk-!-margin-bottom-6">
-
-      <form id="skip-to-form" action="#" novalidate>
-        
-        <div class="govuk-form-group">  
-          <fieldset class="govuk-fieldset">
-            <legend class="govuk-fieldset__legend govuk-fieldset__legend--s">
-              Ingredient 1
-            </legend>
-
-            <div class="govuk-form-group">
-              <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="ingredient-5">What is the name?</label>
-              <input class="govuk-input" id="ingredient-5" name="ingredient-5" type="text" spellcheck="false">
-            </div>
-            
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-one-half">
-          
-                <div class="govuk-form-group">
-          
-                  <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="concentrate-1">What is the exact concentration?</label>
-                  <div class="govuk-input__wrapper">
-                    <input class="govuk-input govuk-input--width-3" id="concentrate-1" name="concentrate-1" type="text" maxlength="3">
-                    <div class="govuk-input__suffix" aria-hidden="true"><span title="Percentage weight by weight">&percnt; w/w</span></div>
-                  </div>
-          
-                </div>
-          
-              </div>
-              <div class="govuk-grid-column-one-half">
-          
-                <div class="govuk-form-group">
-          
-                  <div class="govuk-checkboxes opss-float-right-desktop">
-                    <label class="govuk-label govuk-label--s govuk-!-font-weight-regular" for="cas-1">What is the CAS number?</label>
-                    <input class="govuk-input govuk-input--width-10" id="cas-1" name="cas-1" type="text">
-                  </div>
-          
-                </div>
-          
-              </div>              
-            </div>
-          
-            <div class="govuk-grid-row">
-              <div class="govuk-grid-column-full">
-          
-                <div class="govuk-form-group">
-          
-                  <div class="govuk-checkboxes govuk-!-padding-top-6">
-                    <div class="govuk-checkboxes__item">
-                      <input class="govuk-checkboxes__input" id="poisonous-1" name="poisonous-1" type="checkbox" value="checkbox" checked disabled aria-disabled="true">
-                      <label class="govuk-label govuk-checkboxes__label govuk-!-padding-right-0" for="poisonous-1">
-                        {% include "cosmetics-general/inc_tables-checkbox-label.html" %}
-                      </label>
-                      {% include "cosmetics-general/inc_tables-checkbox-label-hint.html" %}
-                    </div>
-                  </div>
-          
-                </div>
-          
-              </div>
-              
-            </div>
-
-          </fieldset>
-        </div>    
-
-        <button class="govuk-button" data-module="govuk-button">
-          Save and continue
-        </button> 
-
-      </form>
-
-    </div>
-
-    <div class="govuk-grid-column-one-third">
-      
-      <!--h2 class="govuk-heading-s">Already added</h2>
+    <!--h2 class="govuk-heading-s">Already added</h2>
   
       <ol class="govuk-list govuk-list--number govuk-!-font-size-16 opss-secondary-text">
         <li>Lorem ipsum dolor sit amet </li>
@@ -126,8 +132,9 @@
   
       <p class="govuk-body-s opss-secondary-text">
         These ingredients have already been added to the product. 
-      </p--><!-- or .... already been added to the item. -->
-  
-    </div>    
+      </p-->
+    <!-- or .... already been added to the item. -->
+
   </div>
+</div>
 {% endblock %}
