--- a/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing-new-case.html
@@ -1,14 +1,14 @@
 {% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
-    Case 2101-0008
+Case 2101-0008
 {% endblock %}
 
 {% block beforeContent %}
-    {{ govukBackLink({
-        text: "Back",
-        href: "#"
-    }) }}
+{{ govukBackLink({
+text: "Back",
+href: "#"
+}) }}
 {% endblock %}
 
 {% block content %}
@@ -21,11 +21,14 @@
             <!--span class="govuk-heading-m govuk-!-font-weight-regular govuk-!-padding-left-1 opss-secondary-text">2101-0008</span-->
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">From here you can find all the information about this case. If you have editing rights for this case, you can add products, businesses and supporting information.</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">From here you can find all the information
+            about this case. If you have editing rights for this case, you can add products, businesses and supporting
+            information.</p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <a href="close-case.html"
+                class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Close case
             </a><!-- or, Re-open case -->
         </div>
@@ -62,13 +65,14 @@
                 <span class="govuk-warning-text__assistive">Warning</span>
                 A product has not been added to this case.
             </strong>
-        </div>        
+        </div>
 
         {% include "psd-revised-flow/inc_top_nav_2_empty.html" %}
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl
+            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -84,24 +88,28 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Allegation <!--span class="opss-numero" title="Number">&numero;</span-->   <!-- or Enquiry / Project -->
+                    Allegation
+                    <!--span class="opss-numero" title="Number">&numero;</span-->
+                    <!-- or Enquiry / Project -->
                 </dt>
                 <dd class="govuk-summary-list__value">
                     2101-0008 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
-                        <span class="govuk-visually-hidden"> - </span>Case number 
+                        <span class="govuk-visually-hidden"> - </span>Case number
                     </span>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Reference <!--span class="opss-numero" title="Number">&numero;</span-->
+                    Reference
+                    <!--span class="opss-numero" title="Number">&numero;</span-->
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
+                    12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading
+                        standards reference</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="/psd-revised-flow/edit-reference-number" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the reference number</span>                                
+                        Edit<span class="govuk-visually-hidden"> the reference number</span>
                     </a>
                 </dd>
             </div>
@@ -110,15 +118,15 @@
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                                        
+
 
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                            <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the summary</span>                                
+                    <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the summary</span>
                     </a>
                 </dd>
-            </div>            
+            </div>
             <div class="govuk-summary-list__row opss-summary-list__row--split">
                 <dt class="govuk-summary-list__key">
                     Status
@@ -167,7 +175,7 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
 
-                            Renfrewshire Council
+                    Renfrewshire Council
 
                 </dd>
                 <dd class="govuk-summary-list__actions">
@@ -195,7 +203,7 @@
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">Case risk level</dt>
                 <dd class="govuk-summary-list__value">
-                    
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="#" class="govuk-link govuk-link--no-visited-state">
@@ -225,14 +233,16 @@
         <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-6 opss-float-left">
             Safety and compliance
         </h3>
-        
-        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
-            Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
-        </a>                              
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <a href="edit-why-are-you-creating-a-case"
+            class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+            Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
+        </a>
+
+        <dl
+            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
-                                <dt class="govuk-summary-list__key">
+                <dt class="govuk-summary-list__key">
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -245,15 +255,16 @@
                 </dt>
                 <dd class="govuk-summary-list__value">
                     Electric shock
-                                </dd>
+                </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Hazard description
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
-                                </dd>
+                    Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto.
+                    Aut, maiores quisquam elit.
+                </dd>
             </div>
         </dl>
 
@@ -266,47 +277,48 @@
             You can add this information after a product has been added to the case
         </h4>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl
+            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                                        <!--a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
+                    <!--a href="edit-batch-numbers" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the batch numbers for Asda washing up liquid</span>
                     </a-->
-                </dd>                
-            </div>  
+                </dd>
+            </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Customs codes
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <!--a href="edit-customs-codes" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the customs codes for Asda washing up liquid</span>
                     </a-->
-                </dd>                
+                </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Units affected
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <!--a href="edit-units-affected" class="govuk-link govuk-link--no-visited-state">
                         Edit<span class="govuk-visually-hidden"> the units affected for Asda washing up liquid</span>
                     </a-->
-                </dd>                
-            </div>              
-        </dl>        
+                </dd>
+            </div>
+        </dl>
 
     </section>
 
