--- a/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
+++ b/app/views/psd-revised-flow/case-trading-stds-landing_warnings.html
@@ -1,30 +1,33 @@
 {% extends "layout-psd-menu_cases.html" %}
 
 {% block pageTitle %}
-    Case landing page - Trading Stds - with warning texts
+Case landing page - Trading Stds - with warning texts
 {% endblock %}
 
 {% block beforeContent %}
-    {{ govukBackLink({
-        text: "Back",
-        href: "cases"
-    }) }}
+{{ govukBackLink({
+text: "Back",
+href: "cases"
+}) }}
 {% endblock %}
 
 {% block content %}
 
 <div class="govuk-grid-row">
     <div class="govuk-grid-column-three-quarters opss-desktop-min-height--s">
-        <span class="govuk-caption-m">Allegation</span>   <!-- Allegation 2101-0008 -->
+        <span class="govuk-caption-m">Allegation</span> <!-- Allegation 2101-0008 -->
         <h1 class="govuk-heading-l govuk-!-margin-bottom-3">
             Case {% include "psd-revised-flow/case-ref.html" %}
         </h1>
 
-        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">From here you can find all the information about this case. If you have editing rights for this case, you can add products, businesses and supporting information.</p>
+        <p class="govuk-body opss-secondary-text govuk-!-margin-bottom-7">From here you can find all the information
+            about this case. If you have editing rights for this case, you can add products, businesses and supporting
+            information.</p>
     </div>
     <div class="govuk-grid-column-one-quarter govuk-!-margin-bottom-4">
         <div class="opss-text-align-right">
-            <a href="close-case.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
+            <a href="close-case.html"
+                class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 opss-text-underline-offset">
                 Close case
             </a>
         </div>
@@ -46,11 +49,20 @@
 
     <section id="page-content" role="region" class="govuk-grid-column-three-quarters">
 
-        <div class="govuk-warning-text govuk-!-display-inline-block">
+        <div class="govuk-warning-text govuk-!-display-inline-block govuk-!-margin-bottom-0 opss-warning-text--s">
             <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
             <strong class="govuk-warning-text__text">
                 <span class="govuk-warning-text__assistive">Warning</span>
                 A product has not been added to this case.
+            </strong>
+        </div>
+        <div
+            class="govuk-warning-text govuk-!-display-inline-block govuk-!-margin-top-0 govuk-!-margin-bottom-4 opss-warning-text--s opss-warning-text--normal">
+            <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
+
+            <strong class="govuk-warning-text__text">
+                <span class="govuk-warning-text__assistive">Warning</span>
+                Cases without products are subject to deletion during case audits.
             </strong>
         </div>
 
@@ -58,10 +70,8 @@
 
         <h2 class="govuk-heading-m govuk-!-margin-top-1 govuk-visually-hidden">Case overview</h2>
 
-
-
-
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl
+            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Case name
@@ -77,22 +87,26 @@
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Allegation   <!-- or Enquiry / Project -->
+                    Allegation
+                    <!-- or Enquiry / Project -->
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    2101-0008 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Case number</span>
+                    2101-0008 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Case
+                        number</span>
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
-                    Reference <!--span class="opss-numero" title="Number">&numero;</span-->
+                    Reference
+                    <!--span class="opss-numero" title="Number">&numero;</span-->
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading standards reference</span>
+                    12345300 <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">Trading
+                        standards reference</span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
                     <a href="/psd-revised-flow/edit-reference-number" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the reference number</span>                                
+                        Edit<span class="govuk-visually-hidden"> the reference number</span>
                     </a>
                 </dd>
             </div>
@@ -101,16 +115,20 @@
                     Summary
                 </dt>
                 <dd class="govuk-summary-list__value">
-                                                            <span class="opss-text-limit-scroll-s">
-                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam, laboriosam voluptate aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem vero, voluptatum nulla debitis recusandae rerum eos? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam, laboriosam voluptate aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem vero, voluptatum nulla debitis recusandae rerum eos? 
+                    <span class="opss-text-limit-scroll-s">
+                        Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam magnam, laboriosam voluptate
+                        aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem vero, voluptatum nulla debitis
+                        recusandae rerum eos? Lorem, ipsum dolor sit amet consectetur adipisicing elit. Quibusdam
+                        magnam, laboriosam voluptate aut, rem nobis porro ipsam sint iure, earum facere! Ad dolorem
+                        vero, voluptatum nulla debitis recusandae rerum eos?
                     </span>
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                            <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
-                        Edit<span class="govuk-visually-hidden"> the summary</span>                                
+                    <a href="/psd-revised-flow/edit-summary" class="govuk-link govuk-link--no-visited-state">
+                        Edit<span class="govuk-visually-hidden"> the summary</span>
                     </a>
                 </dd>
-            </div>          
+            </div>
             <div class="govuk-summary-list__row opss-summary-list__row--split">
                 <dt class="govuk-summary-list__key">
                     Status
@@ -230,14 +248,16 @@
         <h3 id="safety" class="govuk-heading-m govuk-!-margin-top-6 opss-float-left">
             Safety and compliance
         </h3>
-        
-        <a href="edit-why-are-you-creating-a-case" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
-            Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
-        </a>                              
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <a href="edit-why-are-you-creating-a-case"
+            class="govuk-link govuk-link--no-visited-state govuk-!-font-size-19 govuk-!-margin-top-6 opss-float-right">
+            Edit<span class="govuk-visually-hidden"> the safety and compliance</span>
+        </a>
+
+        <dl
+            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
-                                <dt class="govuk-summary-list__key">
+                <dt class="govuk-summary-list__key">
                     Reported as
                 </dt>
                 <dd class="govuk-summary-list__value">
@@ -253,12 +273,13 @@
                 </dd>
             </div>
             <div class="govuk-summary-list__row">
-                                <dt class="govuk-summary-list__key">
+                <dt class="govuk-summary-list__key">
                     Hazard description
                 </dt>
                 <dd class="govuk-summary-list__value">
                     <span class="govuk-!-font-size-16">
-                        Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel architecto. Aut, maiores quisquam elit.
+                        Lorem ipsum oluta nisi assumenda, aperiam enim dolores labore non fuga. Dolorum rem vel
+                        architecto. Aut, maiores quisquam elit.
                     </span>
                 </dd>
             </div>
@@ -272,41 +293,42 @@
             You can add this information after a product has been added to the case
         </h4>
 
-        <dl class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
+        <dl
+            class="govuk-summary-list opss-summary-list-mixed opss-summary-list-mixed--narrow-dt opss-summary-list-mixed--narrow-actions">
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Batch numbers
                 </dt>
                 <dd class="govuk-summary-list__value">
-                     
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                                        
-                </dd>                
-            </div>  
+
+                </dd>
+            </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Customs codes
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    
-                </dd>                
+
+                </dd>
             </div>
             <div class="govuk-summary-list__row">
                 <dt class="govuk-summary-list__key">
                     Units affected
                 </dt>
                 <dd class="govuk-summary-list__value">
-                    
+
                 </dd>
                 <dd class="govuk-summary-list__actions">
-                    
-                </dd>                
-            </div>              
-        </dl>                   
+
+                </dd>
+            </div>
+        </dl>
 
     </section>
 
