updated dates text

--- a/app/views/cosmetics-general/ingredients-list-dates.html
+++ b/app/views/cosmetics-general/ingredients-list-dates.html
@@ -747,8 +747,7 @@ Ingredients list
     <div class="govuk-grid-row">
         <p id="october"
             class="govuk-body govuk-!-font-size-14 govuk-!-margin-top-9 govuk-!-margin-bottom-0 opss-secondary-text opss-text-align-right">
-            <sup>&ast;</sup>Notifications submitted before 3 October 2022 are not searchable for ingredients. <br
-                class="opss-br-desktop">These ingredients may also feature in older notifications.
+            <sup>&ast;</sup>Notifications submitted before 3 October 2022 are not searchable for ingredients.
         </p>
     </div>
 </div>
