updated js and date filter html for COS

--- a/app/views/cosmetics-general/ingredients-ingredients-search.html
+++ b/app/views/cosmetics-general/ingredients-ingredients-search.html
@@ -292,7 +292,8 @@ Ingredients search
                     Apply
                 </button>
 
-                <button type="reset" class="govuk-button govuk-!-font-size-16 opss-button-link" id="opss-reset">
+                <button type="reset" class="govuk-button govuk-!-font-size-16 opss-button-link opss-nojs-hide"
+                    id="opss-reset">
                     Reset
                 </button>
             </div>
