ingredient guide text updated

--- a/app/views/cosmetics-general/ingredient-select-formula-text.html
+++ b/app/views/cosmetics-general/ingredient-select-formula-text.html
@@ -30,8 +30,7 @@ href: "/index"
       <div class="govuk-warning-text govuk-!-margin-top-6 govuk-!-margin-bottom-5">
         <span class="govuk-warning-text__icon" aria-hidden="true">!</span>
         <strong class="govuk-warning-text__text">
-          <span class="govuk-warning-text__assistive">Warning</span> It is a legal requirement to include ingredients
-          accurately.
+          <span class="govuk-warning-text__assistive">Warning</span> You are required to include ingredients accurately.
         </strong>
       </div>
 
