--- a/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
+++ b/app/views/cosmetics-general/ingredient-2a-enter-ingredient-poison.html
@@ -26,7 +26,7 @@ href: "/index"
 <div class="govuk-grid-row">
   <div class="govuk-grid-column-two-thirds">
 
-    <p class="govuk-body-s opss-secondary-text">For every ingredient:</p>
+    <p class="govuk-body-s opss-secondary-text">Add each ingredient separately. For every ingredient:</p>
 
     <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
       <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
