--- a/app/views/cosmetics-general/ingredient-1b-how-many.html
+++ b/app/views/cosmetics-general/ingredient-1b-how-many.html
@@ -20,7 +20,7 @@ href: "/index"
       Add the ingredients
     </h1>
 
-    <p class="govuk-body-s opss-secondary-text">Add each ingredient separately. For every ingredient:</p>
+    <p class="govuk-body-s opss-secondary-text">Add each ingredient individually. For every ingredient:</p>
 
     <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
       <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
