--- a/app/views/cosmetics-general/inc_tables-details.html
+++ b/app/views/cosmetics-general/inc_tables-details.html
@@ -1,7 +1,7 @@
 <p class="govuk-body-s opss-secondary-text">Add each ingredient individually. For every ingredient:</p>
 
 <ul class="govuk-list govuk-list--bullet govuk-!-font-size-16 opss-secondary-text">
-  <li>If it is shown as an ingredient on the product label it must to be added to the notification as an
+  <li>If it is shown as an ingredient on the product label it must be added to the notification as an
     ingredient</li>
   <li>Use the International Nomenclature of Cosmetic Ingredients (<abbr>INCI</abbr>) name, where available</li>
   <li>{% include "cosmetics-general/inc_npis-hint.html" %}</li>
