--- a/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
+++ b/app/views/psd-revised-flow/inc_products_pg_content_timestamped.html
@@ -26,14 +26,16 @@
             Skip to the main content
         </a>
 
-        {% include "psd-revised-flow/inc_left_nav_top-part-only.html" %}        
+        {% include "psd-revised-flow/inc_left_nav_top-part-only.html" %}
 
         <ul class="govuk-list opss-left-nav">
             <li>
-                <a href="/psd-revised-flow/case-page-closed.html" class="govuk-link govuk-link--no-visited-state">Case <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span></a>
+                <a href="/psd-revised-flow/case-page-closed.html" class="govuk-link govuk-link--no-visited-state">Case
+                    <span class="govuk-!-font-weight-regular">&nbsp;2101-0008</span></a>
             </li>
             <li class="opss-left-nav__active">
-                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products <span>(1)</span></a>
+                <a href="#page-content" class="govuk-link govuk-link--no-visited-state" aria-current="page">Products
+                    <span>(1)</span></a>
 
                 <ul class="govuk-list">
                     <li>
@@ -44,16 +46,20 @@
                 </ul>
             </li>
             <li>
-                <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses <span>(2)</span></a>
+                <a href="/psd-revised-flow/businesses.html" class="govuk-link govuk-link--no-visited-state">Businesses
+                    <span>(2)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images <span>(3)</span></a>
+                <a href="/psd-revised-flow/images.html" class="govuk-link govuk-link--no-visited-state">Images
+                    <span>(3)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/supporting-information.html" class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
+                <a href="/psd-revised-flow/supporting-information.html"
+                    class="govuk-link govuk-link--no-visited-state">Supporting information <span>(9)</span></a>
             </li>
             <li>
-                <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>  <!-- have add comment on this page -->
+                <a href="/psd-revised-flow/activity.html" class="govuk-link govuk-link--no-visited-state">Activity</a>
+                <!-- have add comment on this page -->
             </li>
         </ul>
     </nav>
@@ -107,28 +113,28 @@
 
                 </div>
             </div-->
-            
+
             <div class="govuk-tabs opss-tabs govuk-!-margin-bottom-2 opss-tabs--min-height-m" data-module="govuk-tabs">
                 <h3 class="govuk-tabs__title">
-                  Information related to this <abbr>PSD</abbr> product record
+                    Information related to this <abbr>PSD</abbr> product record
                 </h3>
-                
+
                 <ul class="govuk-tabs__list">
-                  <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
-                    <a class="govuk-tabs__tab" href="#product-tab-2">
-                      Details
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#images-tab-2">
-                      Images <span class="govuk-!-font-size-16">(2)</span>
-                    </a>
-                  </li>
-                  <li class="govuk-tabs__list-item">
-                    <a class="govuk-tabs__tab" href="#cases-tab-2">
-                      Cases <span class="govuk-!-font-size-16">(4)</span>
-                    </a>
-                  </li>
+                    <li class="govuk-tabs__list-item govuk-tabs__list-item--selected">
+                        <a class="govuk-tabs__tab" href="#product-tab-2">
+                            Details
+                        </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                        <a class="govuk-tabs__tab" href="#images-tab-2">
+                            Images <span class="govuk-!-font-size-16">(2)</span>
+                        </a>
+                    </li>
+                    <li class="govuk-tabs__list-item">
+                        <a class="govuk-tabs__tab" href="#cases-tab-2">
+                            Cases <span class="govuk-!-font-size-16">(4)</span>
+                        </a>
+                    </li>
                 </ul>
 
                 <div class="govuk-tabs__panel govuk-!-padding-bottom-2" id="product-tab-2">
@@ -138,13 +144,16 @@
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>   
+                                <abbr title="Product Safety Database">PSD</abbr> <span title="reference">ref</span>
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                psd-122_1519211809934 
+                                psd-122_1519211809934
                                 <br>
-                                <span class="govuk-!-font-size-16 opss-secondary-text">  
-                                    <span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> reference for this version of the product record - as recorded when the case was closed: 10 April 2022.
+                                <span class="govuk-!-font-size-16 govuk-!-padding-left-2 opss-secondary-text">
+                                    <span class="govuk-visually-hidden"> - </span>The <abbr>PSD</abbr> reference
+                                    for
+                                    this version of the product record - as recorded when the case was closed: 10 April
+                                    2022.
                                 </span>
                             </dd>
                         </div>
@@ -180,7 +189,7 @@
                             <dd class="govuk-summary-list__value">
                                 Asda
                             </dd>
-                        </div--> 
+                        </div-->
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Brand name
@@ -188,7 +197,7 @@
                             <dd class="govuk-summary-list__value">
                                 Asda
                             </dd>
-                        </div>  
+                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Product name
@@ -196,14 +205,14 @@
                             <dd class="govuk-summary-list__value">
                                 Dishwashing liquid
                             </dd>
-                        </div>                                                
+                        </div>
 
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Category
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                Temporibus doloremque 
+                                Temporibus doloremque
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
@@ -221,13 +230,14 @@
                             <dd class="govuk-summary-list__value">
                                 664996-7676323
                             </dd>
-                        </div>                  
+                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Description
                             </dt>
                             <dd class="govuk-summary-list__value">
-                                Pump action 300ml bottle with clear liquid used for spraying onto domestic windows and glass for cleaning.
+                                Pump action 300ml bottle with clear liquid used for spraying onto domestic windows and
+                                glass for cleaning.
                             </dd>
                         </div>
                         <div class="govuk-summary-list__row">
@@ -237,15 +247,15 @@
                             <dd class="govuk-summary-list__value">
 
                             </dd>
-                        </div>       
+                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Market date 
+                                Market date
                             </dt>
                             <dd class="govuk-summary-list__value">
 
                             </dd>
-                        </div>                              
+                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Country of origin
@@ -264,12 +274,12 @@
                         </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
-                                Product marking 
+                                Product marking
                             </dt>
                             <dd class="govuk-summary-list__value">
                                 Unknown
                             </dd>
-                        </div> 
+                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key">
                                 Model or product number
@@ -277,44 +287,47 @@
                             <dd class="govuk-summary-list__value">
                                 334176-01
                             </dd>
-                        </div>                          
+                        </div>
                         <div class="govuk-summary-list__row">
                             <dt class="govuk-summary-list__key opss-border-none">
                                 Other product identifiers
                             </dt>
                             <dd class="govuk-summary-list__value opss-border-none">
-                                
+
                             </dd>
                         </div>
                     </dl>
-                    
+
                     <!--p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To edit the details for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page</a>
                     </p-->
-              
+
                 </div>
 
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="images-tab-2">
                     <h4 class="govuk-heading-m">Product images</h4>
-                  
-                    <p class="govuk-body-s opss-secondary-text">There are 2 images added to this product record. <br class="opss-br-desktop">These are the product images &ndash; they <strong>are not</strong> case evidence images.
-                    </p>   
-                    
+
+                    <p class="govuk-body-s opss-secondary-text">There are 2 images added to this product record. <br
+                            class="opss-br-desktop">These are the product images &ndash; they <strong>are not</strong>
+                        case evidence images.
+                    </p>
+
                     {% include "psd-revised-flow/inc_tab-prod-img-1.html" %}
 
-                    {% include "psd-revised-flow/inc_tab-prod-img-2.html" %}    
-                    
+                    {% include "psd-revised-flow/inc_tab-prod-img-2.html" %}
+
                     </ul>
 
                     <!--p class="govuk-body-s govuk-!-margin-bottom-1 opss-secondary-text opss-text-align-right">
                         To edit the images for this product go to the full <a href="/psd-revised-flow/product-page.html" class="govuk-link govuk-link--no-visited-state"><span class="govuk-visually-hidden">psd-122</span> product record page <span class="govuk-visually-hidden">to access its images</span></a>
                     </p-->
-              
+
                 </div>
 
                 <div class="govuk-tabs__panel govuk-tabs__panel--hidden govuk-!-padding-bottom-2" id="cases-tab-2">
                     <h4 class="govuk-heading-m">Related cases</h4>
-                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">The original product record was or is included in these 4 cases.</p>
+                    <p class="govuk-body-s govuk-!-margin-bottom-7 opss-secondary-text">The original product record was
+                        or is included in these 4 cases.</p>
 
                     {% include "psd-revised-flow/inc_tab-prod-cases-x4.html" %}
                 </div>
@@ -324,9 +337,9 @@
                 <a href="/psd-revised-flow/remove-product.html" class="govuk-link govuk-link--no-visited-state govuk-!-font-size-16 opss-text-underline-offset">
                     Remove this <span class="govuk-visually-hidden">Asda window and glass cleaner </span>product <span class="govuk-visually-hidden">from the case</span>
                 </a>
-            </div-->             
-    
-        </section>  
+            </div-->
+
+        </section>
 
     </section>
 </div>
